--- a/UI/package.json
+++ b/UI/package.json
@@ -62,7 +62,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
