--- a/UI/package.json
+++ b/UI/package.json
@@ -42,10 +42,9 @@
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.7",
     "@iconify/react": "^1.1.4",
-    "@material-ui/core": "^5.0.0-beta.1",
-    "@material-ui/lab": "^5.0.0-alpha.40",
-    "@material-ui/styles": "^5.0.0-beta.1",
-    "@material-ui/utils": "^5.0.0-beta.0",
+    "@mui/lab": "^5.0.0-alpha.47",
+    "@mui/material": "^5.0.0",
+    "@mui/styles": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.27.3",
     "change-case": "^4.1.2",
