--- a/UI/package.json
+++ b/UI/package.json
@@ -49,6 +49,7 @@
     "apexcharts": "^3.27.3",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
+    "downshift": "3.2.10",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
