--- a/BE/package.json
+++ b/BE/package.json
@@ -19,6 +19,7 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3-rc.0",
+    "nodemailer": "^6.7.1",
     "sequelize": "^6.9.0"
   },
   "devDependencies": {
